Fixed icons align bug on PhoneGap.

--- a/src/style/less/page/timeline.less
+++ b/src/style/less/page/timeline.less
@@ -64,6 +64,13 @@
               font-size: 20px;
               margin-right: 5px;
               line-height: 20px;
+              vertical-align: middle;
+            }
+          }
+
+          span{
+            &.text{
+              vertical-align: middle;
             }
           }
         }
